--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -202,6 +202,8 @@ h1, .h1
 	font-size: 28px
 	line-height: 1
 	+med
+	+r4
+		font-size: 20px
 
 .h4
 	font-size: 32px
@@ -599,9 +601,5 @@ a
 			max-width: 100%
 	+r3
 		&_big-img
-			.man__img
-				width: 60px
-				height: 60px
-				vertical-align: top
 			.man__text
-				vertical-align: top
+				font-size: 14px
