--- a/src/sass/_typography.sass
+++ b/src/sass/_typography.sass
@@ -36,12 +36,12 @@ $indent: 30px
 			position: relative
 			color: #9bc1bc
 			list-style-type: disc
-			font-size: 16px
 			margin-left: 30px
 			span
+				display: inline-block
 				color: #000
-				font-size: 1.125em
 				padding-left: 7px
+				vertical-align: top
 	figure
 		border-bottom: 1px solid #9bc1bc
 		padding-bottom: 20px
@@ -53,6 +53,7 @@ $indent: 30px
 			margin-bottom: 10px
 		.iframe-wrap
 			position: relative
+			margin-bottom: 10px
 			padding-bottom: 55.25%
 			height: 0
 			overflow: hidden
@@ -142,18 +143,40 @@ $indent: 30px
 				bottom: 19px
 	.man
 		margin: 37px 0 10px
+	.expand__link
+		font-size: 30px
 	+r5
 		&__list-num
-			font-size: 50px
 			min-width: 80px
 	+r2
 		&__inner
 			padding: 0
 	+r3
+		font-size: 16px
+		.man
+			margin-top: 15px
+	+r4
+		ul li
+			margin-left: 15px
+		&__list li
+			display: block
+		&__option
+			display: block
+			+clr
+		&__el
+			clear: both
 		&__list-num
-			min-width: 50px
+			display: block
+			float: left
+			min-width: auto
+			margin-right: 18px
 			text-align: left
-			font-size: 35px
-			letter-spacing: 3.25px
 		blockquote
-			font-size: 20px
+			font-size: 22px
+			line-height: 1.85
+		.h3
+			margin: 5px 0 0
+			line-height: 1.4
+			overflow: hidden
+		.expand__link
+			font-size: 18px
