--- a/src/partials/header-main.html
+++ b/src/partials/header-main.html
@@ -23,8 +23,7 @@
 			</a>
 		</div>
 		<div class="mini-search">
-			<input type="text" class="mini-search__input js-mini-search-input">
-			<i class="fa fa-search js-mini-search-btn"></i>
+			<a href="#" class="fa fa-search"></a>
 		</div>
 	</div>
 </header>
