--- a/src/sass/_typography.sass
+++ b/src/sass/_typography.sass
@@ -25,7 +25,11 @@ $indent: 30px
 	&__inner
 		padding: 0 55px
 	h2
+		+fira
 		+med
+		margin-bottom: 7px
+		font-size: 28px
+
 	a
 		font-size: 18px
 	p
