--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -69,6 +69,9 @@
 	font-style: italic
 
 // 'Fira Sans' font
+=fira
+	font-family: 'Fira Sans', Helvetica, Arial, sans-serif
+
 =reg
 	font-family: 'Fira Sans', Helvetica, Arial, sans-serif
 	font-weight: 400
@@ -179,6 +182,9 @@ strong, b
 
 i, em
 	font-style: normal
+
+button, input[type="button"]
+	cursor: pointer
 
 h1, .h1
 	font-size: 60px
