--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -9,7 +9,7 @@ body
 	+cover
 	display: block
 	+r1
-		background-position: 43% 50% 
+		background-position: 43% 50%
 	+r2
 		display: none
 
@@ -33,10 +33,10 @@ body
 		min-width: 320px
 		position: relative
 		+r1
-			padding: 0 70px 0 165px 
+			padding: 0 70px 0 165px
 		+r2
 			min-height: 60px
-			padding: 0 45px 0 0 
+			padding: 0 45px 0 0
 	&__inner
 		margin: 0 auto
 		max-width: 1290px
@@ -46,36 +46,26 @@ body
 	position: absolute
 	top: 0
 	right: 0
-	padding: 24px 25px 26px 10px 
-	background: #fff 
+	padding: 24px 25px 26px 10px
+	background: #fff
 	min-width: 70px
 	+r2
 		padding: 17px 15px 16px 10px
 		min-width: 45px
-	&__input
-		border-bottom: 4px solid rgba(#282828, 0.15)
-		color: #282828  
-		font-size: 18px
-		padding: 2px 0 2px 0
-		width: 0
-		transition: width 0.3s
-		float: right
-		+r2
-			border-bottom-width: 2px 
-		&.is-active
-			width: 180px
-			padding-right: 30px
-	i
+	a
 		font-size: 29px
 		color: #282828
 		position: absolute
 		top: 24px
 		right: 25px
 		cursor: pointer
+		+tr(color .3s)
 		+r2
 			top: 19px
 			right: 15px
 			font-size: 20px
+		&:hover
+			color: $orange
 
 .logo
 	+bold
@@ -90,7 +80,7 @@ body
 	+r2
 		top: 0
 		left: 50%
-		padding: 13px 0 7px 
+		padding: 13px 0 7px
 		width: 130px
 		text-align: center
 		margin-left: -65px
@@ -131,7 +121,7 @@ body
 		width: 100%
 		position: absolute
 		left: 50%
-		margin-left: -13px 
+		margin-left: -13px
 	&:before, &:after
 		content: ""
 		transition: transform 0.2s, top 0.2s 0.2s
@@ -153,12 +143,13 @@ body
 	content: ""
 	position: relative
 	padding: 10px 0 10px 40px
-	margin: 21px 0 
+	margin: 21px 0
 	min-height: 37px
+	+tr(color .3s)
 	+r2
 		padding: 0
-		margin: 17px 0 0 
-		min-height: 1px 
+		margin: 17px 0 0
+		min-height: 1px
 	i
 		font-size: 37px
 		position: absolute
@@ -168,12 +159,15 @@ body
 		+r2
 			font-size: 26px
 			position: static
-			margin: 0 
+			margin: 0
 	span
 		+r2
 			display: none
-		
-.nav 
+	&:hover
+		color: #ff8c61
+
+
+.nav
 	font-size: 0
 	float: left
 	+r2
@@ -183,7 +177,7 @@ body
 		left: 0
 		width: 100%
 		max-width: 300px
-		background: #fff 
+		background: #fff
 		box-shadow: 0 5px 6px rgba(159, 159, 159, 0.5)
 		overflow: hidden
 		visibility: hidden
@@ -195,9 +189,9 @@ body
 		+r2
 			transform: translateX(0)
 			opacity: 1
-			visibility: visible 
+			visibility: visible
 	&:before
-		content: "" 
+		content: ""
 		position: absolute
 		top: -9px
 		left: 0
@@ -210,15 +204,15 @@ body
 	&__list
 		+r2
 			max-height: 100%
-			overflow: auto 
-			padding: 20px 0 
+			overflow: auto
+			padding: 20px 0
 	&__item
 		display: inline-block
 		vertical-align: top
-		padding: 0 20px 0 0 
+		padding: 0 20px 0 0
 		+r2
 			display: block
-			padding: 0 
+			padding: 0
 	&__link
 		color: #282828
 		font-size: 18px
@@ -236,7 +230,7 @@ body
 				color: #d27857
 			span
 				&:before
-					border-color: #d27857 
+					border-color: #d27857
 		&.is-purple
 			&:hover, &.is-active
 				color: #c0a6cd
@@ -267,17 +261,17 @@ body
 				right: 15px
 		span
 			display: block
-			padding: 30px 0 32px 
+			padding: 30px 0 32px
 			position: relative
 			+r2
 				padding: 10px 15px
 			&:before
-				content: "" 
+				content: ""
 				position: absolute
 				bottom: 0
 				left: 0
 				width: 20px
-				border-bottom: 5px solid 
+				border-bottom: 5px solid
 				transition: width 0.3s
 				+r2
 					display: none
