--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -994,6 +994,7 @@
 			display: block
 			vertical-align: top
 			padding: 15px 15px 18px
+			height: auto
 	&__center
 		max-width: 1110px
 		margin: 0 auto
