--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -922,6 +922,9 @@
 			position: relative
 			background-position: center
 
+.fullscreen-wrap
+	display: block
+
 .fullscreen
 	min-height: 100vh
 	display: table
@@ -949,6 +952,12 @@
 		border: 1px solid
 		+r2
 			display: none
+	&:hover
+		.fullscreen
+			&__hidden
+				max-height: 100px
+				opacity: 1
+				overflow: hidden 
 	&_yellow
 		&:after
 			border-color: $gold
@@ -988,8 +997,9 @@
 		vertical-align: bottom
 		position: relative
 		z-index: 1
-		padding: 27px 21px 30px
 		height: 100vh
+		padding: 27px 21px 30px
+		overflow: hidden
 		+r2
 			display: block
 			vertical-align: top
@@ -1028,6 +1038,15 @@
 		+r2
 			font-size: 16px
 			line-height: 22px
+	&__hidden
+		max-height: 0
+		opacity: 0
+		overflow: hidden
+		transition: max-height 0.4s, opacity 0.2s
+		text-align: center
+		+r2
+			max-height: 100px
+			opacity: 1 
 	h4
 		font-size: 24px
 		line-height: 1
@@ -1045,6 +1064,18 @@
 		line-height: 17px
 		color: #ccc
 		margin-bottom: 10px
+	&__link
+		color: #fff
+		display: block 
+		padding-bottom: 10px
+		position: relative
+		&:before
+			position: absolute
+			bottom: 100%
+			left: 0
+			right: 0
+			height: 2000px
+			content: "" 
 
 .info-block
 	background-color: #fff
@@ -1052,6 +1083,7 @@
 	text-align: center
 	padding: 15px 15px 27px
 	position: relative
+	transition: color 0.2s
 	&:hover
 		.info-block
 			&__author
@@ -1080,6 +1112,10 @@
 		.info-block
 			&__author
 				color: #d27857
+		&:hover
+			color: #d27857 
+			p
+				color: #d27857 
 	&__author
 		font-size: 14px
 		line-height: 17px
@@ -1091,9 +1127,12 @@
 		line-height: 26px
 		margin-bottom: 10px
 		+lora
+		max-height: 26px
+		overflow: hidden 
 		+r3
 			font-size: 20px
 			line-height: 24px
+			max-height: 24px 
 	&__user
 		max-width: 500px
 		margin: 0 auto
@@ -1115,6 +1154,11 @@
 			font-size: 16px
 			line-height: 18px
 			+light
+			transition: color 0.2s
+			max-height: 36px
+			overflow: hidden 
+			+r2
+				line-height: 18px
 
 .item-full
 	background: #FFF
@@ -1136,6 +1180,9 @@
 		.item-full
 			&__author
 				color: #fff
+			&__hidden
+				max-height: 100px
+				opacity: 1 
 	&:before, &:after
 		content: ""
 		position: absolute
@@ -1193,6 +1240,11 @@
 		margin: 0 auto
 		+r3
 			font-size: 16px
+	&__hidden
+		max-height: 0
+		overflow: hidden
+		opacity: 0
+		transition: max-height 0.4s, opacity 0.3s 
 
 .col-news, .col-more, .news-column, .col-items
 	display: inline-block
