--- a/src/partials/popups.html
+++ b/src/partials/popups.html
@@ -1,6 +1,6 @@
 
 <!-- begin popup-login -->
-<div class="popup js-popup js-popup-login">
+<div class="popup js-popup" data-popup="popup-login">
     <div class="popup__in js-tabs">
         <button class="fa fa-close popup__close js-close-popup"></button>
         <div class="popup__tabs">
