--- a/src/sass/_popups.sass
+++ b/src/sass/_popups.sass
@@ -43,6 +43,10 @@
         top: -35px
         background: transparent
         font-size: 22px
+        opacity: .8
+        +tr(opacity .3s)
+        &:hover
+            opacity: 1
     &__body
         padding: 10px 50px
         +r4
