--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -7,7 +7,8 @@ body
 	width: 100%
 	height: 149px
 	+cover
-	display: block
+	// display: block
+	display: none
 	+r1
 		background-position: 43% 50%
 	+r2
